--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-avatar-editor": "^13.0.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.11.2",
     "redux": "^4.2.1"
